<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EPA - ECONOMIA PARTICIPATIVA</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account /&#160;</string>
    <string name="sign_in">Sign In</string>
    <string name="tap_to_change">Tap To Change</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="version">Version -&#160;</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_description">Product Description</string>
    <string name="give_your_product_a_short_and_clear_title">Give your product a short and clear title.</string>
    <string name="give_your_product_a_short_and_clear_description">Give your product a short and clear description.</string>
    <string name="product_price">Product Price (R$)</string>
    <string name="choose_product_image">Choose Product Image</string>
    <string name="update_product">UPDATE PRODUCT</string>
    <string name="all_categories">All Categories</string>
    <string name="welcome_to_ecde">Welcome to EPA</string>
    <string name="sell_within_the_app_make_offers_and_nbuy_from_people_you_trust">Sell within the app, make offers and\nbuy from people you trust</string>
    <string name="if_you_are_new">If you are new /&#160;</string>
    <string name="create_new">Create New</string>
    <string name="forgot_password">Forgot Password /&#160;</string>
    <string name="reset">Reset</string>
    <string name="login">LOGIN</string>
    <string name="by_clicking_on_login_you_are_accepting_our_nterms_amp_conditions"><![CDATA[By clicking on login, you are accepting our\nTerms & Conditions]]></string>
    <string name="search_for_items">Search for items</string>
    <string name="food_and_drinks">Food And Drinks</string>
    <string name="description">Description</string>
    <string name="seller_name">Seller Name</string>
    <string name="error">ERROR</string>
    <string name="ok">OK</string>
    <string name="share_app">Share App</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_new_product">Add New product</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="app_developer">App Developer</string>
    <string name="others">Others</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="english">English</string>
    <string name="inbox">Inbox</string>
    <string name="unread">Unread</string>
    <string name="no_message_available">No Message Available</string>
    <string name="my_products">My Products</string>
    <string name="share">Share</string>
    <string name="no_product_available_for_sale">No Product Available For Sale</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="to_start_selling_nall_you_need_is_a_title_description_images_and_price">To start selling,\nAll you need is a title, description, images and price.</string>
    <string name="product_title">Product Title</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="waiting">Waiting…</string>
    <string name="read">Read</string>
    <string name="report_user">Report User</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="reported">REPORTED</string>
    <string name="thanks_for_report">Thanks for reporting, Our internal team will check this issue.</string>
    <string name="admin">Admin</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_capital">DELETE PRODUCT</string>
    <string name="are_you_sure_to_delete_item">Are you sure you want to delete this product?</string>
    <string name="deleting">Deleting…</string>
    <string name="product_has_deleted">Product has deleted</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="admob_banner_ads_unit">ca-app-pub-4469098252692270/8008076595</string>
    <string name="admob_interstitial_ads_unit">ca-app-pub-4469098252692270/8560780362</string>
    <string name="verify_your_email">VERIFY YOUR EMAIL</string>
    <string name="updated">UPDATED</string>
    <string name="we_have_sent_verification_link">We have sent verification link on your mail address.</string>
    <string name="your_record_deleted">You record has been deleted.</string>
    <string name="creating_account">Creating Account…</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="select_picture">Select Picture</string>
    <string name="choose_profile_pic">Choose Profile Pic</string>
    <string name="loading">Loading…</string>
    <string name="sell_on_ecde">Sell On EPA</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="choose_subcategory">Choose Subcategory</string>
    <string name="manage_store">Manage Store</string>
    <string name="no_product_available">No Product Available</string>
    <string name="support">Support</string>
    <string name="donate">Donate</string>
    <string name="time_not_available">TIME NOT AVAILABLE</string>
    <string name="promoting">Promoting</string>
    <string name="promote">Promote</string>
    <string name="all">All</string>
    <string name="featured_Ad_for_30_days">Featured Ad for 30 Days</string>
    <string name="pay_25_r">Pay 25 R$</string>
    <string name="featured_ad_for_7_days">Featured Ad for 7 Days</string>
    <string name="pay_10_r">Pay 10 R$</string>
    <string name="new_word">New</string>
    <string name="used">Used</string>
    <string name="day1">1 Day</string>
    <string name="days">Days</string>
    <string name="add_subcategory">Add Subcategory</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_subcategory">Edit Subcategory</string>
    <string name="subcategories">Subcategories</string>
    <string name="title_activity_see_all_subcategory">SeeAllSubcategoryActivity</string>
    <string name="search_by_title_city_name">Search by title, city name</string>
    <string name="featured_ad">Featured Ad</string>
    <string name="see_example">See Example</string>
    <string name="get_noticed_with_featured_tag_in_a_top_position">Get noticed with \'FEATURED\' tag in a top position</string>
    <string name="reach_up_to_10_times_more_buyers">Reach up to 10 times more buyers</string>
    <string name="reach_up_to_4_times_more_buyers">Reach up to 4 times more buyers</string>
    <string name="continue_to_pay">Continue to Pay</string>
    <string name="help_us_improve">Help us improve.</string>
    <string name="how_did_you_hear_about_ecde">How did you hear about EPA?</string>
    <string name="do_you_participate_in_any_activism_or_host_group">Do you participate in any activism or host group?</string>
    <string name="submit">Submit</string>
    <string name="how_can_we_improve_ecde_platform_feeback">How can we improve EPA Platform? / Feeback</string>
    <string name="delivered_within">Delivered within</string>
    <string name="charge">| Charge</string>
    <string name="condition">Condition</string>
    <string name="quantity">| Quantity</string>
    <string name="search_for_user">Search for user</string>
    <string name="quant">Quantity</string>
    <string name="product_price_r">Product Price (R$)</string>
    <string name="product_is_new_or_used">Product is new or used?</string>
    <string name="will_you_deliver_this_product">Will you deliver this product?</string>
    <string name="no">No</string>
    <string name="delivery_charge_r">Delivery Charge (R$)</string>
    <string name="max_delivery_days">Max Delivery Days</string>
    <string name="can_you_deliver_on_the_same_day">Can you deliver on the same day?</string>
    <string name="setup_store_profile">Setup Store Profile</string>
    <string name="for_selling_on_ecde_nyou_have_to_create_seller_profile">For selling on EPA,\nYou have to create seller profile.</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="add_store_image">Add Store Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_will_not_visible_on_your_profile">*Phone number will not visible on your profile.</string>
    <string name="about_your_store">About your store</string>
    <string name="create_seller_profile">Create Seller Profile</string>
    <string name="city">City</string>
    <string name="report">Report</string>
    <string name="pay_5_r">Pay 5 R$</string>
    <string name="donate_us_so_we_can_improve_our_ecde_platform">Donate us so we can improve our EPA platform</string>
    <string name="amount_r">Amount (R$)</string>
    <string name="contact_seller">CONTACT SELLER</string>
    <string name="login_with_google">Login With Google</string>
    <string name="token_format_incorrect">The custom token format is incorrect. Please check the documentation.</string>
    <string name="supploed_auth_credntial_malformed">The supplied auth credential is malformed or has expired.</string>
    <string name="email_address_is_badly">The email address is badly formatted.</string>
    <string name="password_is_invalid">The password is invalid or the user does not have a password.</string>
    <string name="previously_singed_in_user">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="login_again_before_retrying">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="account_already_exist">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="email_already_in_use_another_account">The email address is already in use by another account.</string>
    <string name="credential_already_associated">This credential is already associated with a different user account.</string>
    <string name="account_has_been_disabled">The user account has been disabled by an administrator.</string>
    <string name="credential_is_no_longer_valid">The user\\\'s credential is no longer valid. The user must sign in again.</string>
    <string name="no_record_corresponding">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="given_passoword_invalid">The given password is invalid.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_store_image">Change Store Image</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="facebook_app_id" >5139205046139473</string>
    <string name="fb_login_protocol_scheme">fb5139205046139473</string>
    <string name="product_sucssfully_updated">Product Successfully Updated</string>
    <string name="update_ecde">UPDATE EPA?</string>
    <string name="ecde_recommended_that_you_update_to_the_latest_version">EPA Recommended that you update to the latest version.</string>
    <string name="no_thanks">No Thanks</string>
    <string name="update">UPDATE</string>
</resources>