<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.application.epa.SupportActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="16dp"
        />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/supportText"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfprosemibold"
        android:textSize="18sp"
        android:textColor="#040404"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:textSize="13sp"
        android:text="@string/donate"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/supportText"
        android:fontFamily="@font/sfprosemibold"
        android:textColor="@color/salmon"
        />
</RelativeLayout>
<TextView
    android:textColor="#42A5F5"
    android:textSize="12sp"
    android:fontFamily="@font/sfpromedium2"
    android:layout_marginTop="6dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:text="@string/help_us_improve"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/how_did_you_hear_about_ecde"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfpromedium"
        android:textSize="13sp"
        />


    <EditText

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/how_hear"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/transparent_back"
        android:fontFamily="@font/sfpromedium2"
        android:textSize="13sp"
        android:padding="10dp"
        android:gravity="start|top"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/do_you_participate_in_any_activism_or_host_group"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfpromedium"
        android:textSize="13sp"
        android:layout_marginEnd="16dp"
        />
    <EditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/do_you"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/transparent_back"
        android:fontFamily="@font/sfpromedium2"
        android:textSize="13sp"
        android:padding="10dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/how_can_we_improve_ecde_platform_feeback"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfpromedium"
        android:textSize="13sp"
        android:layout_marginEnd="16dp"
        />
    <EditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/transparent_back"
        android:fontFamily="@font/sfpromedium2"
        android:textSize="13sp"
        android:padding="10dp"

        />
    <androidx.appcompat.widget.AppCompatButton

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="#fff"
        android:background="@drawable/transparent_back"
        android:backgroundTint="@color/marsala"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:textSize="13sp"
        android:fontFamily="@font/sfprosemibold2"

        />




</LinearLayout>