<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.application.epa.CreateNewAccount">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:riv_corner_radius="24dp"
            android:src="@drawable/applogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sfprosemibold"
            android:text="@string/create_account"
            android:textColor="#040404"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/sfpromedium2"
                android:text="@string/already_have_an_account"
                android:textColor="#616161"
                android:textSize="13sp" />

            <TextView

                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/sfpromedium2"
                android:text="@string/sign_in"
                android:textColor="@color/salmon"
                android:textSize="13sp" />
        </LinearLayout>


        <FrameLayout

            android:id="@+id/frame"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp">

            <ImageView

                android:id="@+id/user_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/man1" />

            <ImageView

                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circle_back"

                android:src="@drawable/circleimageview" />

        </FrameLayout>

        <TextView
            android:id="@+id/taptochange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpromedium2"
            android:text="@string/tap_to_change"
            android:textColor="#1976D2"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_back"
            android:fontFamily="@font/sfpromedium2"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_back"
            android:fontFamily="@font/sfpromedium2"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="13sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_back"
            android:fontFamily="@font/sfpromedium2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="13sp"

            />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/transparent_back"
            android:backgroundTint="@color/marsala"
            android:fontFamily="@font/sfpromedium2"
            android:text="@string/create_account"
            android:textColor="#fff"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpromedium2"
                android:text="@string/version"
                android:textColor="#616161"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/versionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpromedium2"
                android:text="1.0"
                android:textColor="#616161"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>